# ras_msgs

./: CMakeLists.txt
msg/: Object_id.msg  RAS_Evidence.msg  Shape.msg  pcl_object.msg  pcl_object_mult.msg  pcl_object_pos.msg
